# stock-researcher

./: AGENT_BACKLOG.md  CLAUDE.md  README.md  docker-compose.yml
.claude/agents/: agent-tooling.md  backend-api.md  data-series.md  frontend-ui.md
agent/: pyproject.toml
agent/src/agent/: autonomous.py  cli.py  config.py  display.py  git_ops.py  prompts.py  runner.py  state.py  verify.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3853f72ee731_add_stock_prices_table.py  67d62df815c8_add_market_seasons_table.py  a1c7e9b4d201_add_extended_hours_price_columns.py  f2d902d1e44e_add_reddit_tables.py  fa9d44ea0aa4_replace_reddit_tables_with_apewisdom_.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  market.py  price.py  reddit.py  stock.py
backend/app/routers/: institutions.py  market.py  reddit.py  stocks.py
backend/app/schemas/: institution.py  institutional.py  market.py  reddit.py  stock.py
backend/app/services/: apewisdom_fetcher.py  fear_greed_fetcher.py  finnhub_fetcher.py  fred_fetcher.py  known_tickers.py  price_fetcher.py  reddit_fetcher.py  scoring.py  sec_13f_fetcher.py  ticker_extractor.py
backend/tests/: test_finnhub_fetcher.py  test_fred_fetcher.py  test_price_fetcher.py  test_scoring.py  test_sec_13f_fetcher.py
frontend/: .dockerignore  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/chats/: chat1.md
frontend/components/: BareTwig.tsx  BlossomFlower.tsx  CandlestickChart.tsx  EarningsBoard.tsx  EventsBoard.tsx  FundamentalsGrid.tsx  GrainOverlay.tsx  (+15 more)
(+17 files in other folders)
