[project]
name = "kabuka-agent"
version = "0.1.0"
description = "Autonomous coding agent for the Kabuka repo, wrapping the claude CLI"
requires-python = ">=3.12"
dependencies = ["rich>=13.0"]

[project.scripts]
kabuka-agent = "agent.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
