[project]
name = "kabuka-agent"
version = "0.1.0"
description = "Autonomous coding agent for the Kabuka repo, wrapping the claude CLI"
requires-python = ">=3.12"
dependencies = ["rich>=13.0"]

[project.scripts]
kabuka-agent = "agent.cli:main"

[dependency-groups]
dev = ["ruff>=0.6"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
