[project]
name = "kabuka-backend"
version = "0.1.0"
description = "Backend API for Kabuka stock research app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
